# plot

./: .gitignore  CMakeLists.txt  Fractal.cpp  Fractal.hpp  Functions.cpp  Graphics.cpp  Graphics.hpp  GraphicsDisplay.cpp  GraphicsFuncs.cpp  LICENSE  Makefile  README.md  Types.hpp  _illustrator  clean  complex_in.cpp  glut_config.h  graph.cpp  graph_i.cpp  graphics.hpp  illustrator  illustrator.cpp  mandelbrot.pl  plot_fractal.cpp
core/: Data.cpp  Data.hpp  Functions.hpp  Types.hpp
fractals/: DragonCurve.cpp  Fractal.cpp  Fractal.hpp  FractalIterDiscrete.cpp  FractalIterDiscrete.hpp  FractalIterLine.cpp  FractalIterLine.hpp  JuliaSet.cpp  KochsFlake.cpp  KochsSnowFlake.cpp  SierpinskiCarpet.cpp  SierpinskiTriangle.cpp
graphics/: Axis.cpp  Axis.hpp  Graphics.hpp  GraphicsDisplay.cpp  GraphicsFuncs.cpp
graphics/include/: opengl_config.h
src/: complex_in.cpp  graph_i.cpp  illustrator.cpp
